# oddsdesk

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  settings.yaml
.github/workflows/: release.yml
app/api/: client.py  endpoints.py  models.py
app/services/: budget.py  cache.py  data_service.py
app/ui/widgets/: arb_panel.py  games_table.py  middles_panel.py  sport_tabs.py  status_bar.py
python-legacy/: README.md  pyproject.toml
python-legacy/app/: config.py  main.py
python-legacy/app/services/: ev.py  ev_store.py
python-legacy/app/ui/: app.py  styles.tcss
python-legacy/app/ui/widgets/: constants.py  ev_panel.py  props_table.py
python-legacy/scripts/: generate_engine_fixtures.py
python-legacy/tests/: test_cache.py  test_ev.py  test_models.py
src/: app.css  app.html
src-tauri/: Cargo.toml  settings.yaml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  errors.rs  lib.rs  main.rs  models.rs
src-tauri/src/api/: client.rs  endpoints.rs  mod.rs
src-tauri/src/engine/: arb.rs  ev.rs  middles.rs  mod.rs  novig.rs  odds.rs  sort.rs
src-tauri/src/service/: data_service.rs
src-tauri/src/store/: budget.rs  cache.rs  ev_store.rs  mod.rs
src-tauri/tests/: api_client.rs  data_service.rs  engine_parity.rs  engine_unit.rs  store.rs
src-tauri/tests/fixtures/: event_odds_props.json  events_nba.json  odds_nba.json  scores_nba.json  sports.json
src-tauri/tests/fixtures/engine/: events_game.json  events_props.json
src-tauri/tests/fixtures/engine/golden/: arbs_game.json  arbs_props.json  ev_bets_game.json  ev_bets_props.json  middles_game.json  middles_props.json
src/lib/: bindings.ts  ipc.ts  keybindings.ts  polling.ts
src/lib/components/: CreditBanner.svelte  GamesTable.svelte  GamesView.svelte  PropsTable.svelte  PropsView.svelte  SettingsDrawer.svelte  SidePanels.svelte  SportTabs.svelte  StatusBar.svelte  Toast.svelte  Topbar.svelte
src/lib/components/panels/: ArbPanel.svelte  EvPanel.svelte  MiddlesPanel.svelte
src/lib/components/tables/: SegmentedControl.svelte
src/lib/components/ui/: Button.svelte  (+2 more)
src/lib/display/: consensus.test.ts  consensus.ts  constants.ts  format.ts  odds.test.ts  odds.ts  prices.test.ts  prices.ts
src/lib/stores/: app.svelte.ts  budget.svelte.ts  data.svelte.ts  settings.svelte.ts
src/routes/: +layout.svelte  +page.svelte
tasks/: todo.md
tests/: conftest.py  test_arb.py  test_budget.py  test_data_service.py  test_ev_store.py  test_middles.py
